bee-common/bee-common-derive/tests/packable/fail/dup_id_enum.stderr
error: The identifier `0` is already being used for the `None` variant.
  --> $DIR/dup_id_enum.rs:14:21
   |
14 |     #[packable(id = 0)]
   |                     ^
